@@ -1,3 +1,5 @@
+#This is the main, static ember config file. All of these values can be overridden by a "ember.conf" file placed in the ember home directory (i.e. ~/.ember/ember.conf on linux)
+
 [paths]
 #sharedir = "/usr/local/share/forge"
 #datadir = "/home/erik/opt/worldforge/share/games/ember"
@@ -43,6 +45,11 @@ spacing_bushes = 10
 #how far away foliage should be shown
 cullingdistance = 32
 
+[ogre]
+#the path to the ogre plugin directory. If Ogre is installed by your distro this is usually "/usr/lib/OGRE/", if you've installed ogre yourself it's more probably "/usr/local(lib/OGRE/"
+plugindir="/usr/lib/OGRE/"
+#the plugins to load. This will differ some on windows and unix
+plugins="RenderSystem_GL,Plugin_ParticleFX,Plugin_CgProgramManager"
 
 [terrain]
 #sets how much to scale the alpha maps for the terrain, resulting in smoother terrain splatting, but requiring more memory
