@@ -1,8 +1,0 @@
-# Defines plugins to load
-
-# Define plugin folder
-PluginFolder=/usr/lib/OGRE
-
-Plugin=RenderSystem_GL.so
-Plugin=Plugin_ParticleFX.so
-Plugin=Plugin_CgProgramManager.so
